[workspace]
resolver = "2"
members = [
  "mqtt",
  "mqtt-cli",
  "mqtt-client",
  "mqtt-protocol",
  "mqtt-tokio"
]

[workspace.dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
thiserror = "1.0.56"
tokio = "1.35.1"
tracing = "0.1.40"

[profile.release]
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"
