[package]
name = "tjh-mqtt"
version = "0.3.1"
edition = "2021"
authors = ["tjh <x@tjh.dev>"]
description = "Experimental MQTT client"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tjh-dev/mqtt"
repository = "https://github.com/tjh-dev/mqtt"
documentation = "https://docs.rs/crate/tjh-mqtt/latest"
readme = "README.md"

[dependencies]
bytes = "1.5.0"
serde = { version = "1.0.195", optional = true }
thiserror = { version = "1.0.56" }
tokio = { workspace = true, optional = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "sync",
  "time"
] }
tokio-rustls = { version = "0.25.0", optional = true }
tracing = { workspace = true, optional = true }
webpki-roots = { version = "0.26.0", optional = true }
url = { version = "2.5.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
tokio-client = ["dep:tokio", "dep:tracing"]
tls = ["dep:tokio-rustls", "dep:webpki-roots"]
url = ["dep:url"]

[dev-dependencies]
serde_json = { version = "1.0.112" }
tokio-test = { version = "0.4.3" }

[package.metadata.docs.rs]
all-features = true
