[package]
name = "mqtt-async"
version = "0.0.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
mqtt-core = { version = "*", path = "../mqtt-core" }
tokio = { version = "1.32", features = [
  "net",
  "io-util",
  "macros",
  "sync",
  "time",
  "tracing",
  "rt",
] }
tokio-rustls = { version = "0.24.1", optional = true }
tracing = { version = "0.1" }
webpki-roots = "0.25.2"

[features]
default = ["tls"]
tls = ["dep:tokio-rustls"]
