[package]
name = "mqtt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.18", features = ["derive", "env"] }
mqtt = { path = "../mqtt", features = ["tokio-client", "tls", "url"] }
tokio = { workspace = true, features = ["rt", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[[bin]]
name = "mqtt"
path = "src/main.rs"
