[package]
name = "mqtt-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
serde = { version = "1.0.196", optional = true }
thiserror = { workspace = true }

[features]
serde = ["dep:serde"]