[package]
name = "mqtt-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
mqtt-client = { path = "../mqtt-client", features = ["async"] }
mqtt-protocol = { path = "../mqtt-protocol" }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "sync",
  "time"
] }
tokio-rustls = { version = "0.25.0", optional = true }
tracing = { workspace = true }
webpki-roots = { version = "0.26.0", optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:webpki-roots", "mqtt-client/tls"]
