[package]
name = "mqtt"
version = "0.3.1"
edition = "2021"
authors = ["tjh <x@tjh.dev>"]
description = "Experimental MQTT client"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tjh-dev/mqtt"
repository = "https://github.com/tjh-dev/mqtt"
documentation = "https://docs.rs/crate/tjh-mqtt/latest"
readme = "README.md"

[dependencies]
mqtt-protocol = { path = "../mqtt-protocol" }
mqtt-client = { path = "../mqtt-client" }
mqtt-tokio = { path = "../mqtt-tokio", optional = true }

[features]
default = []
serde = ["mqtt-protocol/serde"]
tokio-client = ["dep:mqtt-tokio"]
tls = ["mqtt-client/tls", "mqtt-tokio/tls"]
url = ["mqtt-client/url"]

[dev-dependencies]
serde_json = { version = "1.0.112" }
tokio-test = { version = "0.4.3" }

[package.metadata.docs.rs]
all-features = true
