[package]
name = "tjh-mqtt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.1", features = ["derive", "env"] }
tjh-mqtt = { version = "0.1.0", path = "../tjh-mqtt", features = ["async-client", "tls"] }
tokio = { version = "1.32.0", features = ["rt", "signal", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
