[package]
name = "tjh-mqtt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.1", features = ["derive", "env"] }
mqtt = { version = "0.3", path = "../tjh-mqtt", features = ["tokio-client", "tls"], package = "tjh-mqtt"}
tokio = { version = "1.32.0", features = ["rt", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "mqtt"
path = "src/main.rs"
