[package]
name = "tjh-mqtt"
version = "0.2.1"
edition = "2021"
authors = ["tjh <x@tjh.dev>"]
description = "Experimental MQTT client"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tjh-dev/mqtt"
repository = "https://github.com/tjh-dev/mqtt"
documentation = "https://docs.rs/crate/tjh-mqtt/latest"
readme = "README.md"

[dependencies]
bytes = "1.4"
tokio = { version = "1.32", features = ["macros", "net", "io-util", "sync",], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tokio-test = { version = "0.4.3", optional = true }
tracing = { version = "0.1", optional = true }
webpki-roots = { version = "0.25.2", optional = true }

[features]
default = []
async-client = ["dep:tokio", "dep:tokio-test", "dep:tracing"]
tls = ["dep:tokio-rustls", "dep:webpki-roots"]

[package.metadata.docs.rs]
all-features = true
