[package]
name = "tjh-mqtt"
version = "0.3.1"
edition = "2021"
authors = ["tjh <x@tjh.dev>"]
description = "Experimental MQTT client"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tjh-dev/mqtt"
repository = "https://github.com/tjh-dev/mqtt"
documentation = "https://docs.rs/crate/tjh-mqtt/latest"
readme = "README.md"

[dependencies]
bytes = "1.5"
serde = { version = "1.0.195", optional = true }
thiserror = "1"
tokio = { workspace = true, optional = true, features = [
  "macros",
  "net",
  "io-util",
  "sync",
] }
tokio-rustls = { version = "0.24", optional = true }
tokio-test = { version = "0.4", optional = true }
tracing = { workspace = true, optional = true }
webpki-roots = { version = "0.25", optional = true }

[features]
default = []
serde = ["dep:serde"]
tokio-client = ["dep:tokio", "dep:tokio-test", "dep:tracing"]
tls = ["dep:tokio-rustls", "dep:webpki-roots"]

[dev-dependencies]
serde_json = "1.0.112"

[package.metadata.docs.rs]
all-features = true
